supplemental: use Path.of based org.gaul-modernizer-maven-plugin-3.0.0 recommendation