@@ -263,8 +263,8 @@ public final class CommonUtil {
             resultPath = path;
         }
         else {
-            final Path pathAbsolute = Paths.get(path);
-            final Path pathBase = Paths.get(baseDirectory);
+            final Path pathAbsolute = Path.of(path);
+            final Path pathBase = Path.of(baseDirectory);
             resultPath = pathBase.relativize(pathAbsolute).toString();
         }
         return resultPath;
@@ -508,7 +508,7 @@ public final class CommonUtil {
      *         or empty string if file does not have an extension.
      */
     public static String getFileExtension(String fileNameWithExtension) {
-        final String fileName = Paths.get(fileNameWithExtension).toString();
+        final String fileName = Path.of(fileNameWithExtension).toString();
         final int dotIndex = fileName.lastIndexOf('.');
         final String extension;
         if (dotIndex == -1) {
