@@ -103,7 +103,7 @@ public final class MetadataGeneratorUtilTest extends AbstractModuleTestSupport {
 
         final Set<String> metaFiles;
         try (Stream<Path> fileStream = Files.walk(
-                Paths.get(System.getProperty("user.dir") + "/src/main/resources/com/puppycrawl"
+                Path.of(System.getProperty("user.dir") + "/src/main/resources/com/puppycrawl"
                         + "/tools/checkstyle/meta"))) {
             metaFiles = fileStream
                     .filter(Files::isRegularFile)
